--- a/pagestyle.css
+++ b/pagestyle.css
@@ -28,7 +28,7 @@ label{
     font-size: 17px;  
     margin-left: 35px;
 }  
-#Uname1{  
+#Uname{  
     width: 300px;  
     height: 30px;  
     border: none;  
@@ -36,7 +36,7 @@ label{
     padding-left: 8px;  
     margin-left: 35px;
 }  
-#Pass1{  
+#Pass{  
     width: 300px;  
     height: 30px;  
     border: none;  
